tabla intermedia y test unitario